k8s/tls-certs/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traafik-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  tls:
    - hosts:
        - sockshop.oldyungdev.tech
        - prometheus.oldyungdev.tech
        - grafana.oldyungdev.tech
      secretName: tls-secret
  rules:
    - host: sockshop.oldyungdev.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
    - host: prometheus.oldyungdev.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
    - host: grafana.oldyungdev.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
